# neural_jacobian_estimation

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: AnalyzeApproximateJacobians-NN.ipynb  AnalyzeApproximateJacobians-locallinear.ipynb  UVS_Comparisons-multi-point.ipynb  UVS_Comparisons-pt-to-pt.ipynb  check_cond_env_pose.ipynb  collect_data.py  collect_robot.sh  collect_simulation.sh  depth_comparison.ipynb  env_play_ground.py  exp_big_knn_search.sh  exp_blackbox_tuning.sh  exp_feature_selection.sh  exp_knn_search.sh  exp_networks_architecture.sh  exp_rl.sh  exp_robo.sh  exp_tune_beta_multitask_nn.sh  exp_tune_l2.sh  exp_uvs.sh  main.py  make_movies.py  multipoint-for-paper-knn-tuning.ipynb  multipoint-for-paper.ipynb  play_pen_baseline.py  pt-to-pt-for-paper.ipynb  random_policy.py  robo-for-paper.ipynb  robo_main.py  sampling-on-a-sphere.ipynb  save_env_targets.py  save_sim_render.py  submit_big_knn.sh  target_sanity_check.py  td_play_ground.py  tuning-beta-multi-task-multi-point.ipynb  tuning-beta-multi-task.ipynb  tuning-beta-multipoint-paper.ipynb  tuning-beta-pt-to-pt-for-paper.ipynb  utils.py  (+2 more)
src/environments/: DHKinematics.py  ExplicitKinematics.py  KinovaInternalCameraReacher.py  KinovaReacher.py  KinovaReacherCamera.py  Tracker.py  __init__.py  camera_publisher.py  kinova_3D_reaching.py  kinova_api.py  kinova_env.py  kinova_homography.py  multi_point_simulator_kinova.py  planar_kinova_reachers.py  simple_tracker.py  simulation_2DOF_reacher.py  simulator_kinova.py  test_simulator_kinova.py  time_filter.py
src/visualservoing/: __init__.py  ammortized_local_least_square_uvs.py  (+19 more)
